# Aperture-

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_LIFECYCLE_BOOTSTRAP.md  README.md  eslint.config.js  package-lock.json  package.json  vite.config.js
.claude/skills/: aperture-ui.md
.context/: AUDIT_PROMPT.md  CODE_STANDARDS.md  FRONTEND_INVENTORY.md  RESUME.md  melodic-sleeping-dragonfly.md
.context/phases/: README.md  phase-0.5-plan-b.md  phase-0.5.md  phase-0.md  phase-1.md  phase-10.md  phase-11.md  phase-12.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
.github/workflows/: ci.yml
dev/active/audit-2026-02-08/: context.md  execution-prompt.md  p0-execution-report.md  p1-execution-report.md  p1-followups-p2-start-report.md  plan.md  report.md  review-of-audit.md  tasks.md
dev/active/context-awareness/: design.md
docs/: ARCHITECTURE.md  INTEGRATION.md  SECURITY_BASELINE.md
docs/archive/: APERTURE-brainstorm.md
reference/: context-forge-prototype.html
scripts/: aperture.fish  install.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/engine/: block.rs  mod.rs  types.rs
src-tauri/src/events/: mod.rs  types.rs
src-tauri/src/proxy/: error.rs  handler.rs  mod.rs
src-tauri/src/terminal/: error.rs  mod.rs  session.rs
src/lib/: mock-data.ts  types.ts
src/lib/canvas/: effects.ts  halftone.ts  index.ts
src/lib/components/: BlockTypeManager.svelte  (+17 more)
src/routes/: +layout.svelte  +page.svelte
tests/: test_proxy.sh
(+42 files in other folders)
