[package]
name = "aperture"
version = "0.1.0"
description = "Universal LLM context visualization, management, and control proxy"
authors = ["Caden"]
edition = "2021"

[lib]
name = "aperture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server/client for proxy
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Token counting
tiktoken-rs = "0.6"

# Terminal (PTY)
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }

# Concurrent collections
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
opt-level = "z"
strip = true
